# cashu-escrow-kit

./: .env  .gitignore  .gitmodules  .provider.env  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
bindings/cashu_escrow_js/: Cargo.toml  README.md
bindings/cashu_escrow_js/src/: lib.rs  models.rs
bindings/cashu_escrow_js/web_client/: bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
client/: Cargo.toml  README.md
client/src/: lib.rs  main.rs
client/src/cli/: mod.rs  trade_contract.rs
client/src/ecash/: mod.rs  tests_ecash.rs
client/src/escrow_client/: buyer_utils.rs  general_utils.rs  mod.rs  nostr.rs  seller_utils.rs
client/src/nostr/: client_nostr_utils.rs  mod.rs
client/tests/: tests.rs  web.rs
client/tests/common/: mod.rs
client/web_client/: index.html  index.js  package-lock.json  package.json  webpack.config.js
client_app/: Cargo.toml
client_app/src/: main.rs
client_app/src/cli/: mod.rs  trade_contract.rs
common/: Cargo.toml  README.md  run_tests.sh
common/src/: lib.rs  model.rs
common/src/cli/: mod.rs
common/src/nostr/: mod.rs  tests.rs
common/tests/: tests.rs  web.rs
common/tests/common/: mod.rs
coordinator/: Cargo.toml
coordinator/src/: lib.rs  main.rs
coordinator/src/escrow_coordinator/: mod.rs
coordinator/src/escrow_provider/: mod.rs
coordinator/src/nostr/: mod.rs
docs/: README.md
docs/obsidian_vault/: protocol-overview.canvas
docs/obsidian_vault/.obsidian/: workspace.json
docs_obsidian/: Untitled.canvas
docs_obsidian/.obsidian/: workspace.json
src/: main.rs
src/ecash/: mod.rs
src/escrow_client/: mod.rs
src/escrow_provider/: mod.rs
src/nostr/: mod.rs
