[workspace]

members = [
    "client",
    "coordinator",
    "common",
    "client_app",
    "bindings/cashu_escrow_js",
]

resolver = "2"

[profile.release]
lto = true
opt-level = 3
strip = true

[workspace.dependencies]
nostr-sdk = { version = "0.35", features = [] }
cdk = "0.4.0"
anyhow = "1"
log = "0.4"
dotenvy = "0.15"
tokio = "1.38"
serde_json = "1"
serde = "*"
env_logger = "0.11"
rand = "0.8"
sha2 = "0.10"

console_log = "1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"