[package]
name = "cashu_escrow_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
nostr-sdk = { workspace = true }
cdk = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

cashu_escrow_common = { path = "../common" }

wasm-bindgen = "0.2.93"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
