[package]
name = "client_app"
version = "0.1.0"
edition = "2021"

[dependencies]
nostr-sdk = { version = "0.34.0", features = [] }
cdk = "0.1.1"
dotenv = "0.15.0"
anyhow = "1.0.86"
tokio = "1.38.0"

cashu_escrow_common = { path = "../common" }
cashu_escrow_client = {path = "../client"}
log = "0.4.22"
env_logger = "0.11.3"
