[package]
name = "client_app"
version = "0.1.0"
edition = "2021"
description = "An application simulationg a user of the escrow service as driver."

[dependencies]
nostr-sdk = { workspace = true, features = [] }
cdk = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true}
dotenv = "0.15.0"
tokio = "1.38.0"
env_logger = "0.11.3"

cashu_escrow_common = { path = "../common" }
cashu_escrow_client = {path = "../client"}

