[package]
name = "client_app"
version = "0.1.0"
edition = "2021"
description = "An application simulationg a user of the escrow service as driver."

[dependencies]
nostr-sdk = { workspace = true }
cdk = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true}
dotenvy = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }

cashu_escrow_common = { path = "../common" }
cashu_escrow_client = {path = "../client"}

