[package]
name = "cashu_escrow_coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = { workspace = true, features = [] }
cdk = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
dotenv = "0.15"
tokio = "1.38"
rand = "0.8"
serde = "1"
serde_json = "1"
sha2 = "0.10"
env_logger = "0.11"

cashu_escrow_common = { path = "../common" }

