[package]
name = "cashu_escrow_coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = { workspace = true }
cdk = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
env_logger = { workspace = true }

cashu_escrow_common = { path = "../common" }

